<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical" >
    <RelativeLayout
        style="@style/ActionBar_Container" 
        android:id="@+id/sort_top"
        android:focusable="true"  
   		android:focusableInTouchMode="true">

        <Button
            android:id="@+id/back_step_btn"
            style="@style/ActionBar_BackBtn" />
            
        <TextView
            android:id="@+id/reset_top_txt"
            style="@style/ActionBar_Title"
            android:text="" />
        
    </RelativeLayout> 
    
    <com.dachen.medicine.view.ClearEditText
        android:id="@+id/phone_numer_edit"
        style="@style/IMLineEditText"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/inputbox" 
        android:hint="@string/please_input_phone_number"
         android:cursorVisible="true"
        android:maxLength="11"
                android:textCursorDrawable="@null" 
        android:inputType="phone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp" 
        android:layout_marginTop="9dp"
      	android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/inputbox" >

        <EditText
            android:id="@+id/auth_code_edit"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/send_again_btn"
            android:background="@null"
            android:hint="@string/please_input_auth_code"
            android:textColorHint="@color/gray_bbbbbb"
            android:textColor="@color/black"
                android:cursorVisible="true"
                android:textCursorDrawable="@null" 
            android:textSize="16sp"
            android:inputType="number" />

         <View
	        android:layout_width="2px"
	        android:layout_height="25dp"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@+id/send_again_btn"
	        android:layout_marginRight="12dp"
	        android:background="@color/divide_line_color" />
        
        <Button
            android:id="@+id/send_again_btn"
			android:layout_width="wrap_content"
        	android:layout_height="38dp"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:minWidth="80dp"
            android:textColor="@color/hyper_text"
            android:textSize="16sp"
            android:text="@string/getcode" />
        
      <!--   <Button
            android:id="@+id/send_again_btn"
            style="@style/IMButton.Green"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:minWidth="80dp"
            android:text="@string/get_auth_code" /> -->
    </RelativeLayout>

    <com.dachen.medicine.view.ClearEditText
        android:id="@+id/password_edit"
        style="@style/IMLineEditPass"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/inputbox"
        android:hint="@string/please_input_password" 
         android:cursorVisible="true"
                android:textCursorDrawable="@null" 
        android:visibility="gone"/>

    <com.dachen.medicine.view.ClearEditText
        android:id="@+id/confirm_password_edit"
        style="@style/IMLineEditPass"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/inputbox"
        android:hint="@string/please_confirm_password"
          android:cursorVisible="true"
                android:textCursorDrawable="@null" 
        android:visibility="gone" />

    <Button
        android:id="@+id/next_step_btn"
            android:background="@drawable/btn_green_all"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="50dp"
        android:text="@string/next_step" />

</LinearLayout>