<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_titlebar"
        layout="@layout/layout_parent_titlebar_groupcompany"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

	<com.dachen.medicine.view.ClearEditText
        android:id="@+id/name_edit"
        style="@style/IMLineEditText"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"

        android:visibility="gone"
        android:background="@drawable/inputbox"
        android:hint="@string/please_input_name" />
    
    <com.dachen.medicine.view.ClearEditText
        android:id="@+id/password_edit"
        style="@style/IMLineEditPass"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/inputbox"
        android:hint="@string/please_input_password_register" />

    <com.dachen.medicine.view.ClearEditText
        android:id="@+id/confirm_password_edit"
        style="@style/IMLineEditPass"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/inputbox"
        android:hint="@string/please_confirm_password" />

    <Button
        android:id="@+id/next_step_btn"
        android:layout_height="40dp"
        android:layout_width="match_parent"
       	android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_blue_all_9ddcff"
        android:text="完成注册"
        android:textColor="@color/white"/>

</LinearLayout>