<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_titlebar"
        layout="@layout/layout_parent_titlebar_groupcompany"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="18dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/addfrined_alert"/>
        <TextView
            android:id="@+id/tel_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="修改后原有手机号将被替换为新手机号，请用新手机号登录"
            android:textSize="16sp"
            android:textColor="@color/gray_333333"/>
    </LinearLayout>


    <com.dachen.medicine.view.ClearEditText
        android:id="@+id/phone_numer_edit"
        style="@style/IMLineEditText"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/inputbox"
        android:hint="@string/please_input_phone_number"
        android:inputType="phone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/inputbox" >

        <EditText
            android:id="@+id/auth_code_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/send_again_btn"
            android:background="@null"
            android:hint="@string/please_input_auth_code"
            android:lines="1"
            android:maxLength="4"
            android:textColorHint="@color/gray_bbbbbb"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:inputType="number" />

        <View
            android:layout_width="2px"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/send_again_btn"
            android:layout_marginRight="12dp"
            android:background="@color/divide_line_color" />

        <Button
            android:id="@+id/send_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:minWidth="80dp"
            android:textColor="@color/hyper_text"
            android:textSize="16sp"
            android:text="@string/get_auth_code" />

    </RelativeLayout>




    <Button
        android:id="@+id/commit_btn"
        android:layout_height="45dp"
        android:layout_width="match_parent"
        android:background="@drawable/btn_blue_all_9ddcff"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="50dp"
        android:text="提交"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/get_call_code_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="收不到验证码？"
            android:textColor="@color/gray_time_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/get_call_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/get_call_code_txt"
            android:gravity="center"
            android:text="@string/get_call_code"
            android:textColor="@color/blue_3cbaff"
            android:textSize="15sp" />

    </RelativeLayout>
</LinearLayout>